transf_difs_helix_v2.cl

--- a/mandelbulber2/formula/ui/transf_difs_helix_v2.ui
+++ b/mandelbulber2/formula/ui/transf_difs_helix_v2.ui
@@ -464,6 +464,13 @@
     </widget>
    </item>
    <item>
+    <widget class="MyCheckBox" name="checkBox_transf_function_enabledD_false">
+     <property name="text">
+      <string>swap xz</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="MyGroupBox" name="groupCheck_transf_function_enabled_false">
      <property name="toolTip">
       <string/>
